Fixed Mobile Viewing Of Navbar/WhiteSpace,Text

--- a/src/pages/Books.css
+++ b/src/pages/Books.css
@@ -443,3 +443,12 @@ padding-top: 0px;
         padding-bottom: 200px;
     }
 }
+@media(max-width:500px){
+    .header {
+        margin-top:50px;
+    }
+    .headerTwo {
+        padding: 0;
+        font-size: 1;
+    }
+}
