--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -483,7 +483,7 @@
 
 }
 .aboutUsLogo {
-    width: 450pxpx;
+    width: 450px;
     height:450px;
     filter:drop-shadow(0px 0px 50px white);
 }
@@ -500,5 +500,15 @@
 @media screen and (max-width:1150px) {
     .cardImage {
         padding:15px;
+    }
+}
+@media (max-width:550px){
+    .aboutUsLogo{
+        width:300px;
+        height:300px;
+    }
+    #title span {
+        font-size: 1.1rem;
+        margin-top:100px;
     }
 }
